@@ -9,19 +9,27 @@ define( function( require ) {
   'use strict';
 
   // imports
+  var BeakerNode = require( 'PH_SCALE/common/view/BeakerNode' );
   var Bounds2 = require( 'DOT/Bounds2' );
+  var DropperFluidNode = require( 'PH_SCALE/common/view/DropperFluidNode' );
+  var DropperNode = require( 'PH_SCALE/common/view/DropperNode' );
+  var FaucetFluidNode = require( 'PH_SCALE/common/view/FaucetFluidNode' );
   var inherit = require( 'PHET_CORE/inherit' );
-  var PhetFont = require( 'SCENERY_PHET/PhetFont' );
   var Node = require( 'SCENERY/nodes/Node' );
+  var PhetFont = require( 'SCENERY_PHET/PhetFont' );
+  var PHFaucetNode = require( 'PH_SCALE/common/view/PHFaucetNode' );
   var ResetAllButton = require( 'SCENERY_PHET/ResetAllButton' );
   var ScreenView = require( 'JOIST/ScreenView' );
+  var SolutionNode = require( 'PH_SCALE/common/view/SolutionNode' );
   var Text = require( 'SCENERY/nodes/Text' );
+  var VolumeIndicatorNode = require( 'PH_SCALE/common/view/VolumeIndicatorNode' );
 
   /**
-   * @param {CustomModel} model
+   * @param {BasicsModel} model
+   * @param {ModelViewTransform2} mvt
    * @constructor
    */
-  function CustomView( model ) {
+  function BasicsView( model, mvt ) {
 
     var thisView = this;
     ScreenView.call( thisView, { renderer: 'svg' } );
@@ -30,23 +38,40 @@ define( function( require ) {
     var rootNode = new Node();
     thisView.addChild( rootNode );
 
-    var underConstruction = new Text( 'Custom: Under Construction', new PhetFont( 30 ) );
+    // beaker
+    var beakerNode = new BeakerNode( model.beaker, mvt );
+    var solutionNode = new SolutionNode( model.solvent, model.solution, model.beaker, mvt );
+    var volumeIndicatorNode = new VolumeIndicatorNode( model.solution.volumeProperty, model.beaker, mvt );
 
-    // Reset All button
+    // dropper
+    var dropperScale = 0.85;
+    var dropperNode = new DropperNode( model.dropper, mvt );
+    dropperNode.setScaleMagnitude( dropperScale );
+    var dropperFluidNode = new DropperFluidNode( model.dropper, model.beaker, dropperScale * dropperNode.getTipWidth(), mvt );
+
+    // drain faucet
+    var drainFaucetNode = new PHFaucetNode( model.drainFaucet, mvt );
+    var DRAIN_FLUID_HEIGHT = 1000; // tall enough that resizing the play area is unlikely to show bottom of fluid
+    var drainFluidNode = new FaucetFluidNode( model.drainFaucet, model.solution, DRAIN_FLUID_HEIGHT, mvt );
+
     var resetAllButton = new ResetAllButton( function() {
       model.reset();
     } );
 
     // Rendering order
-    rootNode.addChild( underConstruction );
+    rootNode.addChild( drainFluidNode );
+    rootNode.addChild( drainFaucetNode );
+    rootNode.addChild( dropperFluidNode );
+    rootNode.addChild( dropperNode );
+    rootNode.addChild( solutionNode );
+    rootNode.addChild( beakerNode );
+    rootNode.addChild( volumeIndicatorNode );
     rootNode.addChild( resetAllButton );
 
     // Layout
-    underConstruction.centerX = this.layoutBounds.centerX;
-    underConstruction.centerY = this.layoutBounds.centerY;
-    resetAllButton.right = this.layoutBounds.right - 20;
+    resetAllButton.right = this.layoutBounds.right - 40;
     resetAllButton.bottom = this.layoutBounds.bottom - 20;
   }
 
-  return inherit( ScreenView, CustomView, { layoutBounds: new Bounds2( 0, 0, 1100, 700 ) } );
+  return inherit( ScreenView, BasicsView, { layoutBounds: new Bounds2( 0, 0, 1100, 700 ) } );
 } );
